Refactor API: rename webhook to sort-string, add validate endpoint
- Rename /webhook to /sort-string for better semantic clarity
- Add /validate endpoint that proxies to Supabase function
- Update frontend to use local validate endpoint
- Both endpoints now use consistent POST method with JSON body
- Remove external Supabase direct calls from frontend

--- a/public/index.html
+++ b/public/index.html
@@ -238,7 +238,7 @@
             resultsDiv.innerHTML = '';
 
             try {
-                const webhookResponse = await fetch(`${API_BASE}/sort-string`, {
+                const webhookResponse = await fetch(`${API_BASE}/webhook`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -252,7 +252,7 @@
                 let validationSuccess = false;
                 
                 try {
-                    const validationResponse = await fetch('/application-task', {
+                    const validationResponse = await fetch('/validate', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
