fix wrong reference

--- a/public/index.html
+++ b/public/index.html
@@ -238,7 +238,7 @@
             resultsDiv.innerHTML = '';
 
             try {
-                const webhookResponse = await fetch(`${API_BASE}/webhook`, {
+                const webhookResponse = await fetch(`${API_BASE}/sort-string`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
